Implementación de mejores practicas recomendadas por sonar